# aurish

./: Cargo.toml  README.md
src/: backend.rs  error.rs  frontend.rs  lib.rs  main.rs  shared.rs  shell.rs
