[package]
name = "aurish"
version = "0.0.1"
edition = "2021"

[[bin]]
name = "aurish"

[[bin]]
name = "aurish-cli"
path = "src/bin/aurish-cli.rs"

[dependencies]
ratatui = { version = "0.29.0", features = ["crossterm"] }
tui-input = "0.11.1"
crossterm = "0.28.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
ishell = "0.3.1"
reqwest = { version = "0.12.12", features = ["json"] }
tokio = { version = "1.43.0", features = ["full"]}
